tests/snapshots/integration__integration_tests__switch_picker__switch_picker_abort_escape.snap
---
source: tests/integration_tests/switch_picker.rs
expression: screen
---
> [QUERY]
    Branch  Status        HEAD±    main↕  Remote⇅  Commit   │Enter: switch | alt-c: create | Esc: cancel | ctrl-u/d: scr
> @ main        ^                                  [HASH] │                                                           
                                                            │○ main has no uncommitted changes                          
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │                                                           
                                                            │
