tests/snapshots/integration__integration_tests__switch_picker__switch_picker_abort_escape_list.snap
---
source: tests/integration_tests/switch_picker.rs
expression: list
---
>
    Branch  Status      HEAD±     main↕    main…±    Remote
> @ main        ^
