tests/snapshots/integration__integration_tests__switch_picker__switch_picker_abort_escape_preview.snap
---
source: tests/integration_tests/switch_picker.rs
expression: preview
---
1: diff 2 3 4 5 6 7 8
Enter: switch | ctrl-u/d: scroll | Tab/alt-1…8: preview | a

○ main has no file changes vs main
