tests/snapshots/integration__integration_tests__switch_picker__switch_picker_alt_l_ignored_list.snap
---
source: tests/integration_tests/switch_picker.rs
expression: list
---
>
    Branch       Status        HEAD±    main↕  Remote⇅  CI
> @ main             ^
  + feature-one      _
  + feature-two      _
