tests/snapshots/integration__integration_tests__switch_picker__switch_picker_multiple_worktrees.snap
---
source: tests/integration_tests/switch_picker.rs
expression: normalized
---
> [QUERY]                                                     │[PREVIEW_HEADER]
    Branch       Status        HEAD±    main↕  Remote⇅  Age │Enter: switch | alt-c: create | Esc: cancel | ctrl-u/d: scr
> @ main             ^                                  16h │
  + feature-one      _                                  16h │○ main has no uncommitted changes
  + feature-two      _                                  16h │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
