tests/snapshots/integration__integration_tests__switch_picker__switch_picker_multiple_worktrees_preview.snap
---
source: tests/integration_tests/switch_picker.rs
expression: preview
---
1: HEAD± 2 3 4 5 6 7
Enter: switch | alt-c: create | alt-x: remove | alt-y: copy

○ main has no uncommitted changes
