tests/snapshots/integration__integration_tests__switch_picker__switch_picker_preview_log.snap
---
source: tests/integration_tests/switch_picker.rs
expression: normalized
---
> [QUERY]                                                     │[PREVIEW_HEADER]
    Branch   Status        HEAD±    main↕  Remote⇅  Commit  │Enter: switch | alt-c: create | Esc: cancel | ctrl-u/d: scr
> + feature      ↑                 ↑5               855962..│
                                                            │* 8559621   +1        1d (feature) Add file 5 with content
                                                            │* b8208db   +1        1d Add file 4 with content
                                                            │* 046917d   +1        1d Add file 3 with content
                                                            │* b0684ea   +1        1d Add file 2 with content
                                                            │* 19be611   +1        1d Add file 1 with content
                                                            │* 05a4a45   +2       16h (HEAD -> main) Initial commit
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
