tests/snapshots/integration__integration_tests__switch_picker__switch_picker_preview_log_preview.snap
---
source: tests/integration_tests/switch_picker.rs
expression: preview
---
1 2: log 3 4 5 6 7
Enter: switch | ctrl-u/d: scroll | Tab/alt-1…7: preview | a

* [HASH]   +1   -1   [TIME] (feature) Commit for preview navig
* [HASH]   +2       [TIME] (HEAD -> main) Initial commit
