tests/snapshots/integration__integration_tests__switch_picker__switch_picker_preview_main_diff.snap
---
source: tests/integration_tests/switch_picker.rs
expression: normalized
---
> [QUERY]                                                     │[PREVIEW_HEADER]
    Branch   Status        HEAD±    main↕  Remote⇅  Commit  │Enter: switch | alt-c: create | Esc: cancel | ctrl-u/d: scr
> + feature      ↑                 ↑2               d1ceec..│
                                                            │ feature_code.rs | 6 ++++++
                                                            │ tests.rs        | 4 ++++
                                                            │ 2 files changed, 10 insertions(+)
                                                            │diff --git a/feature_code.rs b/feature_code.rs
                                                            │new file mode 100644
                                                            │index 0000000..b8bd34c
                                                            │--- /dev/null
                                                            │+++ b/feature_code.rs
                                                            │@@ -0,0 +1,6 @@
                                                            │+fn new_feature() {
                                                            │+    println!("This is a new feature!");
                                                            │+    let x = 42;
                                                            │+    let y = x * 2;
                                                            │+    println!("Result: {}", y);
                                                            │+}
                                                            │diff --git a/tests.rs b/tests.rs
                                                            │new file mode 100644
                                                            │index 0000000..f71e4d6
                                                            │--- /dev/null
                                                            │+++ b/tests.rs
                                                            │@@ -0,0 +1,4 @@
                                                            │+#[test]
                                                            │+fn test_new_feature() {
                                                            │+    assert_eq!(42 * 2, 84);
